TB-2008-08-27-1: Bugfix:     o fixed hedeby test issue_374
                             o added hedeby util function
                               wait_for_resource_removal
                             o cleanup of wait_for_* hedeby util functions
                 Review:     CR

TB-2008-08-27-0: Bugfix:     all hedeby tests need potentially root access in
                             order to gather all log files from all machines in
                             case of a test error.
                 Review:     CR

CR-2008-08-26-3: Bugfix:     o fixed appcert test
                             o fixed scheduler reconnect test
                 Review:     DG

CR-2008-08-26-2: Bugfix:     fixed problem with port list join in
                 Belongs to: CR-2008-08-26-0
                 Review:     TB

CR-2008-08-26-1: Bugfix:     fixed broken hedeby checktree
                 Belongs to: CR-2008-08-26-0
                 Review:     TB

CR-2008-08-26-0: Bugfix:     o get_all_reserved_ports()
                               - jmx_port wasn't reported
                 Enhancem.:  o rework of run_test_level() framework function:
                               - check for running qmaster
                               - join errors into one error message
                             o new menu item: 
                               - (54) analyze used testsuite ports
                               - new procedure: 
                                    check_correct_testsuite_setup_user()
                             o changed some ts_log_fine to finer/finest
                             o added test dependencies (needs) for checks
                               submitting qsh job. The test have now a
                               dependency to "display_test"
                             o new checktree hook:
                               - checktree_get_required_ports()
                             o implemented ports hook for hedeby checktree: