@@ -1,3 +1,11 @@
+CR-2008-08-27-0: Enhancem.:  o new test:
+                               src/checktree/system_tests/execd/reconnect
+                             o new sge_procedure:
+                               get_act_qaster()
+                             o new parameter for get_config():
+                               atimeout - timeout 
+                 Review:     JG
+
 TB-2008-08-27-1: Bugfix:     o fixed hedeby test issue_374
                              o added hedeby util function
                                wait_for_resource_removal
